feat(web-demo): add prefetch queue, auto-carousel, download button & online demo link

--- a/newtab/index.html
+++ b/newtab/index.html
@@ -37,6 +37,18 @@
                     <div id="illustName"><a href=""></a></div>
                 </div>
                 <div class="info-card-actions">
+                    <button id="downloadButton" type="button" title="Download">
+                        <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" style="
+                  pointer-events: none;
+                  display: block;
+                  width: 100%;
+                  height: 100%;
+                " fill="currentColor">
+                            <g>
+                                <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"></path>
+                            </g>
+                        </svg>
+                    </button>
                     <button id="refreshButton" type="button" title="Refresh">
                         <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" style="
                   pointer-events: none;
