--- a/options.html
+++ b/options.html
@@ -582,7 +582,8 @@
           <label id="languageLabel" for="languageSelect"></label>
           <select id="languageSelect">
             <option value="en">English</option>
-            <option value="zh">中文</option>
+            <option value="zh-CN">中文（简体）</option>
+            <option value="zh-TW">中文（繁體）</option>
             <option value="ja">日本語</option>
           </select>
         </div>
