--- a/options.html
+++ b/options.html
@@ -585,6 +585,7 @@
             <option value="zh-CN">中文（简体）</option>
             <option value="zh-TW">中文（繁體）</option>
             <option value="ja">日本語</option>
+            <option value="ko">한국어</option>
           </select>
         </div>
         <div class="display-settings-grid">
