“更新模式”新增“指定画师”

--- a/options.html
+++ b/options.html
@@ -839,7 +839,16 @@
             <option id="popular_dOrder" value="popular_d"></option>
             <option id="popular_male_dOrder" value="popular_male_d"></option>
             <option id="popular_female_dOrder" value="popular_female_d"></option>
+            <option id="artistOrder" value="artist"></option>
           </select>
+        </div>
+
+        <div class="group group-inline-row inline-field" id="artistIdGroup">
+          <label id="artistIdLabel" for="artistId"></label>
+          <div class="field-body">
+            <input type="text" id="artistId" name="artistId" data-i18n-placeholder="artistIdLabel" />
+            <div id="artistIdHelper" class="helper"></div>
+          </div>
         </div>
 
         <div class="group group-inline-row inline-field">
