Add play/pause button for ugoira animation control
Introduces a play/pause button overlay for ugoira (animated wallpaper) playback, allowing users to pause and resume the animation. Refactors ugoira playback logic into a controller object for better state management and updates related UI and CSS for the new button.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </svg>
       </div>
     </div>
+    <button id="playPauseButton" class="play-pause-btn hidden" type="button" aria-label="Play/Pause">
+      <span class="material-symbols-outlined">pause</span>
+    </button>
     <div id="illustInfo">
       <div class="info-card-body">
         <a id="avatar" href="">
