Add proxy URL support and advanced settings UI
Introduces a new advanced settings section in the options page, allowing users to configure a custom proxy URL for Pixiv API requests. Updates localization files for all supported languages with new labels and helper text. Refactors backend logic to use the proxy URL for API endpoints when set, and updates preferences and options handling to persist the new setting.

--- a/options.html
+++ b/options.html
@@ -1023,6 +1023,19 @@
       </div>
     </div>
 
+    <div class="group advanced-section">
+      <h2 class="section-label" id="advancedSettingsLabel"></h2>
+      <div class="filter-settings-block">
+        <div class="group group-inline-row inline-field">
+          <label id="proxyUrlLabel" for="proxyUrl"></label>
+          <div class="field-body">
+            <input type="text" id="proxyUrl" name="proxyUrl" placeholder="https://your-proxy.example.com" />
+            <div id="proxyUrlHelper" class="helper"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="action-buttons">
       <button id="reset" type="button">Reset</button>
     </div>
