Add GitHub Actions workflow for release
Introduces a release workflow that builds the PixTab extension, extracts the version from manifest.json, and creates or updates a GitHub Release with the build artifacts.

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1040,7 +1040,7 @@
       <button id="reset" type="button">Reset</button>
     </div>
   </div>
-  <script type="module" src="src/options/panel.js"></script>
+  <script type="module" src="panel.js"></script>
 </body>
 
 </html>
