--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -65,7 +65,7 @@
       <iframe id="settingsFrame" src="options.html?embedded=1" title="Settings" frameborder="0"></iframe>
     </div>
   </div>
-  <script type="module" src="src/newtab/app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 
 </html>
