Fix resource paths and remove duplicate option assignment
Corrected the base URL variable in checkPixivLogin, updated iframe and translation file paths for correct resource loading, and removed a duplicate assignment in saveOptions.

--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -62,7 +62,7 @@
   </div>
   <div id="settingsOverlay" class="settings-overlay" aria-hidden="true">
     <div class="settings-overlay-panel" role="dialog" aria-modal="true" aria-labelledby="settingsFrame">
-      <iframe id="settingsFrame" src="options.html?embedded=1" title="Settings" frameborder="0"></iframe>
+      <iframe id="settingsFrame" src="../options/options.html?embedded=1" title="Settings" frameborder="0"></iframe>
     </div>
   </div>
   <script type="module" src="app.js"></script>
