--- a/src/options/options.html
+++ b/src/options/options.html
@@ -65,6 +65,7 @@
       min-height: 100vh;
       position: relative;
       color-scheme: dark; /* Default fallback */
+      transition: background-color 0.3s, color 0.3s;
     }
 
 
@@ -121,7 +122,7 @@
       cursor: pointer;
       color: var(--panel-text-color);
       opacity: 0.6;
-      transition: opacity 0.2s, background-color 0.2s;
+      transition: opacity 0.3s, background-color 0.3s;
       box-shadow: none;
     }
 
@@ -206,7 +207,7 @@
       border-radius: 8px;
       font-size: 14px;
       outline: none;
-      transition: border-color 0.2s, background-color 0.2s;
+      transition: border-color 0.3s, background-color 0.3s;
       background-color: var(--input-bg);
       color: var(--panel-text-color);
     }
@@ -468,7 +469,7 @@
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.3s;
+      transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
       margin-top: 20px;
       box-shadow: var(--button-shadow);
     }
@@ -842,7 +843,7 @@
       text-align: center;
       border: 1px solid var(--input-border-color);
       cursor: pointer;
-      transition: background-color 0.2s, border-color 0.2s;
+      transition: background-color 0.3s, border-color 0.3s;
       font-size: 14px;
       color: var(--panel-text-color);
       box-shadow: none;
@@ -871,7 +872,7 @@
       border: 1px solid var(--input-border-color);
       border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.2s, border-color 0.2s;
+      transition: background-color 0.3s, border-color 0.3s;
       margin-top: 0;
       width: auto;
       box-shadow: none;
