优化反向代理，图标加载，登录状态显示

--- a/src/newtab/index.html
+++ b/src/newtab/index.html
@@ -3,8 +3,6 @@
 
 <head>
   <title>PixTab</title>
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -26,7 +24,9 @@
       </div>
     </div>
     <button id="playPauseButton" class="play-pause-btn hidden" type="button" aria-label="Play/Pause">
-      <span class="material-symbols-outlined">pause</span>
+      <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+        <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" />
+      </svg>
     </button>
 
     <div id="illustInfo">
@@ -54,7 +54,9 @@
             </svg>
           </button>
           <button id="settingsButton" class="icon-button" title="Settings" type="button">
-            <span class="material-symbols-outlined" aria-hidden="true">menu</span>
+            <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+              <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
+            </svg>
           </button>
         </div>
       </div>
