--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Pix Tab Options</title>
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <style>
     * {
       margin: 0;
@@ -64,7 +62,8 @@
       padding: 32px;
       min-height: 100vh;
       position: relative;
-      color-scheme: dark; /* Default fallback */
+      color-scheme: dark;
+      /* Default fallback */
       transition: background-color 0.3s, color 0.3s;
     }
 
@@ -139,8 +138,10 @@
       color: var(--button-text-color);
     }
 
-    .theme-switcher button .material-symbols-outlined {
-      font-size: 18px;
+    .theme-switcher button .icon {
+      width: 18px;
+      height: 18px;
+      display: block;
     }
 
     .group {
@@ -576,6 +577,13 @@
       height: auto;
     }
 
+    input[type="checkbox"] {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+      accent-color: rgba(101, 180, 255, 0.85);
+    }
+
     .field-row {
       display: flex;
       align-items: center;
@@ -864,6 +872,14 @@
       color: #f87171;
     }
 
+    .login-status-value.loading {
+      color: rgba(101, 180, 255, 0.85);
+      min-width: 60px;
+      font-weight: 600;
+      font-family: 'Courier New', monospace;
+      letter-spacing: 2px;
+    }
+
     .secondary-button {
       padding: 8px 16px;
       font-size: 14px;
@@ -893,13 +909,22 @@
       <h1 id="settingsHeading"></h1>
       <div class="theme-switcher">
         <button id="themeLightBtn" type="button" title="Light Theme" aria-label="Light Theme">
-          <span class="material-symbols-outlined">light_mode</span>
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path
+              d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z" />
+          </svg>
         </button>
         <button id="themeDarkBtn" type="button" title="Dark Theme" aria-label="Dark Theme">
-          <span class="material-symbols-outlined">dark_mode</span>
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path
+              d="M9 2c-1.05 0-2.05.16-3 .46 4.06 1.27 7 5.06 7 9.54 0 4.48-2.94 8.27-7 9.54.95.3 1.95.46 3 .46 5.52 0 10-4.48 10-10S14.52 2 9 2z" />
+          </svg>
         </button>
         <button id="themeAutoBtn" type="button" title="Auto Theme" aria-label="Auto Theme">
-          <span class="material-symbols-outlined">sync</span>
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path
+              d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z" />
+          </svg>
         </button>
       </div>
     </div>
@@ -1086,7 +1111,7 @@
             <span id="loginStatusNotLoggedIn" style="display:none;"></span>
             <button type="button" id="loginStatusValue" class="login-status-value"></button>
           </div>
-      </div>
+        </div>
         <div class="group group-inline-row inline-field">
           <label id="loginFallbackModeLabel" for="loginFallbackMode"></label>
           <select id="loginFallbackMode" name="loginFallbackMode">
@@ -1107,10 +1132,10 @@
       <h2 class="section-label" id="advancedSettingsLabel"></h2>
       <div class="filter-settings-block">
         <div class="group group-inline-row inline-field">
-          <label id="proxyUrlLabel" for="proxyUrl"></label>
+          <label id="reverseProxyDomainLabel" for="reverseProxyDomain"></label>
           <div class="field-body">
-            <input type="text" id="proxyUrl" name="proxyUrl" placeholder="https://your-proxy.example.com" />
-            <div id="proxyUrlHelper" class="helper"></div>
+            <input type="text" id="reverseProxyDomain" name="reverseProxyDomain" placeholder="i.pixiv.re" />
+            <div id="reverseProxyDomainHelper" class="helper"></div>
           </div>
         </div>
       </div>
